# optimisaurio

./: .gitignore  CMakeLists.txt  README.md  best_by_gen.csv  compile_commands.json  datos_358.csv  datos_358.txt  fitness.csv  graph.R  parameters.cfg  parser  parser.cpp  results.csv  run.sh  slurm  tiempos.R
config/: camel.cfg  michaelwicz.cfg  sinoidal.cfg
src/: camel.cpp  michaelwicz.cpp  opti-mae.cpp  opti-sae.cpp  opti-sse.cpp  opti.cpp  opti2.cpp  rosenbrock.cpp  sinoidal.cpp
src/2d/: camel.cpp  michaelwicz.cpp  objective2d.h  opti.cpp  opti2d.cpp  rosenbrock.cpp  sinoidal.cpp
src/5d/: objective5d.h  opti-mae.cpp  opti-sae.cpp  opti-sse.cpp  opti5d.cpp
