cmake_minimum_required(VERSION 3.20)
project(opti VERSION 1.0 LANGUAGES CXX)
project(camel VERSION 0.1 LANGUAGES CXX)
project(michaelwicz VERSION 0.1 LANGUAGES CXX)
project(rosenbrock VERSION 0.1 LANGUAGES CXX)
project(sinoidal VERSION 0.1 LANGUAGES CXX)
project(opti-mae VERSION 0.1 LANGUAGES CXX)
project(opti-sae VERSION 0.1 LANGUAGES CXX)
project(opti-sse VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(MPI REQUIRED COMPONENTS CXX)

add_executable(opti src/opti.cpp)
add_executable(opti-mae src/opti-mae.cpp)
add_executable(opti-sae src/opti-sae.cpp)
add_executable(opti-sse src/opti-sse.cpp)
add_executable(camel src/camel.cpp)
add_executable(michaelwicz src/michaelwicz.cpp)
add_executable(rosenbrock src/rosenbrock.cpp)
add_executable(sinoidal src/sinoidal.cpp)

target_link_libraries(opti PRIVATE MPI::MPI_CXX)
target_link_libraries(camel PRIVATE MPI::MPI_CXX)
target_link_libraries(michaelwicz PRIVATE MPI::MPI_CXX)
target_link_libraries(rosenbrock PRIVATE MPI::MPI_CXX)
target_link_libraries(sinoidal PRIVATE MPI::MPI_CXX)
target_link_libraries(opti-mae PRIVATE MPI::MPI_CXX)
target_link_libraries(opti-sae PRIVATE MPI::MPI_CXX)
target_link_libraries(opti-sse PRIVATE MPI::MPI_CXX)